--- a/virtual_aging_partner_balance_report/views/virtual_aging_partner_balance_report_view.xml
+++ b/virtual_aging_partner_balance_report/views/virtual_aging_partner_balance_report_view.xml
@@ -37,7 +37,7 @@
     <record id="virtual_aging_partner_balance_report_view" model="ir.actions.act_window">
         <field name="name">virtual_aging_partner_balance_report</field>
         <field name="res_model">virtual.aging.partner.balance.report</field>
-        <field name="view_type">form</field>
+        <field name="view_mode">form</field>
         <field name="context">{"search_default_current_year":1}</field>
         <field name="view_mode">pivot,tree</field>
     </record>
